Letzte Semester/2021 - HWP/Gruppe 3/5/03_bibliothek/error.txt
bibliothek.c:99:1: error: expected expression at end of input
   99 | int idx =
      | ^~~
make: *** [Makefile:7: compile] Error 1
